--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -1,6 +1,8 @@
 {
+  "EXIT ?": "EXIT ?",
+  "Help?":"Help?",
+  "Home": "Home",
   "How Many??": "How Many??",
-  "Maths": "Maths",
   "Literacy": "Literacy",
-  "Home": "Home"
+  "Maths": "Maths"
 }
