Loading now includes error message and cancel
Fixes #163

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -1,6 +1,7 @@
 {
+  "Cancel": "Cancel",
+  "Home": "Home",
   "How Many??": "How Many??",
-  "Maths": "Maths",
   "Literacy": "Literacy",
-  "Home": "Home"
+  "Maths": "Maths"
 }
