--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -3,6 +3,7 @@
   "Help?":"Help?",
   "Cancel": "Cancel",
   "Continue": "Continue",
+  "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "Home": "Home",
   "How Many??": "How Many??",
   "Literacy": "Literacy",
