--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -1,11 +1,14 @@
 {
   "EXIT ?": "EXIT ?",
-  "Help?":"Help?",
+  "Help?": "Help?",
   "Cancel": "Cancel",
   "Continue": "Continue",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "Home": "Home",
   "How Many??": "How Many??",
+  "hundred": "hundred",
   "Literacy": "Literacy",
-  "Maths": "Maths"
+  "Maths": "Maths",
+  "one": "one",
+  "ten": "ten"
 }
