Figure out the initial level of child by quiz
Fixes #130

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -2,6 +2,7 @@
   "EXIT ?": "EXIT ?",
   "Help?":"Help?",
   "Cancel": "Cancel",
+  "Challenge": "Challenge",
   "Continue": "Continue",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "Home": "Home",
