--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -1,15 +1,25 @@
 {
+  "eight": "eight",
   "EXIT ?": "EXIT ?",
   "Help?": "Help?",
   "Cancel": "Cancel",
   "Challenge": "Challenge",
+  "Click x1 times on number x2!": "Click x1 times on number x2!",
   "Continue": "Continue",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
+  "five": "five",
+  "four": "four",
   "Home": "Home",
   "How Many??": "How Many??",
   "hundred": "hundred",
   "Literacy": "Literacy",
   "Maths": "Maths",
+  "nine": "nine",
   "one": "one",
-  "ten": "ten"
+  "seven": "seven",
+  "six": "six",
+  "ten": "ten",
+  "three": "three",
+  "two": "two",
+  "zero": "zero"
 }
