--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -11,5 +11,12 @@
   "Home": "घर",
   "circle": "वृत्त",
   "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "आयशा ने आम के 2 बक्से खरीदे।\nप्रत्येक बक्से में 4 आम हैं।\nउसने कितने आम खरीदे?",
-  "mangos": "आम"
+  "mangos": "आम",
+  "Name": "नाम",
+  "What is your name?": "तुम्हारा नाम क्या है?",
+  "Choose your avatar": "अपना अवतार चुनें",
+  "What's your age?": "तुम्हारी उम्र क्या है?",
+  "Gender": "लिंग",
+  "Boy": "लड़का",
+  "Girl": "लड़की"
 }
