--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -1,25 +1,51 @@
 {
-  "eight": "eight",
-  "EXIT ?": "EXIT ?",
-  "Help?": "Help?",
+  "Age   :": "Age   :",
+  "App Language :": "App Language :",
   "Cancel": "Cancel",
   "Challenge": "Challenge",
+  "Choose your avatar": "Choose your avatar",
   "Click x1 times on number x2!": "Click x1 times on number x2!",
+  "Contact Us": "Contact us",
   "Continue": "Continue",
+  "eight": "eight",
+  "Email": "Email",
+  "Enter the 6-digit otp here...": "Enter the 6-digit otp here...",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
+  "EXIT ?": "EXIT ?",
+  "Facebook": "Facebook",
   "five": "five",
+  "Follow Us": "Follow Us",
   "four": "four",
+  "Gender  :": "Gender  :",
+  "Help": "Help",
+  "Help?": "Help?",
   "Home": "Home",
   "How Many??": "How Many??",
   "hundred": "hundred",
+  "Instagram": "Instagram",
+  "Invalid Email Address": "Invalid Email Address",
+  "Invalid Phone Number": "Invalid Phone Number",
   "Literacy": "Literacy",
   "Maths": "Maths",
+  "Name   :": "Name   :",
   "nine": "nine",
+  "OK": "OK",
   "one": "one",
+  "Phone number": "Phone number",
+  "Profile": "Profile",
+  "Remove User?": "Remove User?",
+  "Setting": "Setting",
   "seven": "seven",
   "six": "six",
+  "Sound :": "Sound :",
   "ten": "ten",
   "three": "three",
+  "Twitter": "Twitter",
   "two": "two",
+  "User": "User",
+  "verify": "verify",
+  "Visit": "Visit",
+  "We sent an OTP to verify your number.": "We sent an OTP to verify your number.",
+  "WhatsApp": "WhatApp",
   "zero": "zero"
 }
