--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -24,6 +24,7 @@
   "How Many??": "कितने??",
   "hundred": "सौ",
   "Instagram": "इंस्टाग्राम",
+  "Invalid Email Address":"अमान्य ईमेल पता",
   "Invalid Phone Number": "अमान्य फ़ोन नंबर",
   "Literacy": "हिन्दी",
   "mangos": "आम",
