--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -9,6 +9,7 @@
   "Continue": "Continue",
   "eight": "eight",
   "Email": "Email",
+  "Email :":"Email :",
   "Enter the 6-digit otp here...": "Enter the 6-digit otp here...",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "EXIT ?": "EXIT ?",
@@ -31,7 +32,7 @@
   "nine": "nine",
   "OK": "OK",
   "one": "one",
-  "Phone number": "Phone number",
+  "Phone number :": "Phone number :",
   "Profile": "Profile",
   "Remove User?": "Remove User?",
   "Setting": "Setting",
