--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -1,5 +1,5 @@
 {
-  "Age   :": "आयु   ",
+  "Age   :": "आयु   :",
   "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "आयशा ने आम के 2 बक्से खरीदे।\nप्रत्येक बक्से में 4 आम हैं।\nउसने कितने आम खरीदे?",
   "App Language :": "ऐप भाषा :",
   "Boy": "लड़का",
