--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -2,14 +2,16 @@
   "Age   :": "Age   :",
   "App Language :": "App Language :",
   "Cancel": "Cancel",
+  "Cannot verify OTP": "Cannot verify OTP",
   "Challenge": "Challenge",
   "Choose your avatar": "Choose your avatar",
   "Click x1 times on number x2!": "Click x1 times on number x2!",
+  "Confirm":"Confirm",
   "Contact Us": "Contact us",
   "Continue": "Continue",
   "eight": "eight",
   "Email": "Email",
-  "Email :":"Email :",
+  "Email :": "Email :",
   "Enter the 6-digit otp here...": "Enter the 6-digit otp here...",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "EXIT ?": "EXIT ?",
@@ -34,6 +36,7 @@
   "one": "one",
   "Phone number :": "Phone number :",
   "Profile": "Profile",
+  "Resend OTP": "Resend OTP",
   "Remove User?": "Remove User?",
   "Setting": "Setting",
   "seven": "seven",
@@ -44,6 +47,8 @@
   "Twitter": "Twitter",
   "two": "two",
   "User": "User",
+  "verified": "verified",
+  "verifying...":"verifying...",
   "verify": "verify",
   "Visit": "Visit",
   "We sent an OTP to verify your number.": "We sent an OTP to verify your number.",
