--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -3,9 +3,11 @@
   "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "आयशा ने आम के 2 बक्से खरीदे।\nप्रत्येक बक्से में 4 आम हैं।\nउसने कितने आम खरीदे?",
   "App Language :": "ऐप भाषा :",
   "Boy": "लड़का",
+  "Cannot verify OTP": "OTP को सत्यापित नहीं किया जा सकता",
   "Choose your avatar": "अपना अवतार चुनें",
   "circle": "वृत्त",
   "Click x1 times on number x2!": "नंबर x2 पर x1 बार क्लिक करें!",
+  "Confirm":"पुष्टि करें",
   "Contact Us": "हमसे संपर्क करें",
   "eight": "आठ",
   "Email": "ईमेल",
@@ -24,7 +26,7 @@
   "How Many??": "कितने??",
   "hundred": "सौ",
   "Instagram": "इंस्टाग्राम",
-  "Invalid Email Address":"अमान्य ईमेल पता",
+  "Invalid Email Address": "अमान्य ईमेल पता",
   "Invalid Phone Number": "अमान्य फ़ोन नंबर",
   "Literacy": "हिन्दी",
   "mangos": "आम",
@@ -38,6 +40,7 @@
   "Phone number :": "फ़ोन नंबर :",
   "Profile": "प्रोफ़ाइल",
   "Remove User?": "उपयोगकर्ता निकालें?",
+  "Resend OTP":"OTP को फिर से भेजें",
   "Setting": "सेटिंग",
   "seven": "सात",
   "six": "छह",
@@ -47,6 +50,8 @@
   "Twitter": "ट्विटर",
   "two": "दो",
   "User": "उपयोगकर्ता",
+  "verified": "सत्यापित",
+  "verifying...":"पुष्टि करने ...",
   "verify": "सत्यापित करें",
   "Visit": "वेबसाइट जायें",
   "We sent an OTP to verify your number.": "हमने आपका नंबर सत्यापित करने के लिए एक OTP भेजा है।",
