--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -5,9 +5,10 @@
   "Boy": "लड़का",
   "Cannot verify OTP": "OTP को सत्यापित नहीं किया जा सकता",
   "Choose your avatar": "अपना अवतार चुनें",
+  "Choose Your Language": "अपना भाषा चुनें",
   "circle": "वृत्त",
   "Click x1 times on number x2!": "नंबर x2 पर x1 बार क्लिक करें!",
-  "Confirm":"पुष्टि करें",
+  "Confirm": "पुष्टि करें",
   "Contact Us": "हमसे संपर्क करें",
   "eight": "आठ",
   "Email": "ईमेल",
@@ -31,16 +32,23 @@
   "Literacy": "हिन्दी",
   "mangos": "आम",
   "Maths": "गणित",
+  "English": "अंग्रेज़ी",
+  "Puzzle": "पहेली",
   "Name   :": "नाम   :",
   "New Level Unlocked": "नया स्तर खुला",
   "New World Unlocked": "नई दुनिया खुला",
   "nine": "नौ",
   "OK": "ठीक है",
   "one": "एक",
+  "1": "एक",
   "Phone number :": "फ़ोन नंबर :",
   "Profile": "प्रोफ़ाइल",
   "Remove User?": "उपयोगकर्ता निकालें?",
-  "Resend OTP":"OTP को फिर से भेजें",
+  "Resend OTP": "OTP को फिर से भेजें",
+  "Rewards": "पुरस्कार",
+  "Characters": "पात्र",
+  "BACKGROUND": "पृष्ठभूमि",
+  "ACHIEVEMENTS": "उपलब्धियां",
   "Setting": "सेटिंग",
   "seven": "सात",
   "six": "छह",
@@ -51,12 +59,14 @@
   "two": "दो",
   "User": "उपयोगकर्ता",
   "verified": "सत्यापित",
-  "verifying...":"पुष्टि करने ...",
+  "verifying...": "पुष्टि करने ...",
   "verify": "सत्यापित करें",
   "Visit": "वेबसाइट जायें",
   "We sent an OTP to verify your number.": "हमने आपका नंबर सत्यापित करने के लिए एक OTP भेजा है।",
   "What is your name?": "तुम्हारा नाम क्या है?",
   "What's your age?": "तुम्हारी उम्र क्या है?",
   "WhatsApp": "व्हाट्सएप",
-  "zero": "शून्य"
+  "zero": "शून्य",
+  "Begin Quiz": "प्रश्नोत्तरी शुरू करें",
+  "MatchBox": "माच करें"
 }
