--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -5,6 +5,7 @@
   "Cannot verify OTP": "Cannot verify OTP",
   "Challenge": "Challenge",
   "Choose your avatar": "Choose your avatar",
+  "Choose Your Language": "Choose Your Language",
   "Click x1 times on number x2!": "Click x1 times on number x2!",
   "Confirm":"Confirm",
   "Contact Us": "Contact us",
