--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -7,7 +7,7 @@
   "Choose your avatar": "Choose your avatar",
   "Choose Your Language": "Choose Your Language",
   "Click x1 times on number x2!": "Click x1 times on number x2!",
-  "Confirm":"Confirm",
+  "Confirm": "Confirm",
   "Contact Us": "Contact us",
   "Continue": "Continue",
   "eight": "eight",
@@ -38,18 +38,20 @@
   "Phone number :": "Phone number :",
   "Profile": "Profile",
   "Resend OTP": "Resend OTP",
+  "Remove Teacher?": "Remove Teacher?",
   "Remove User?": "Remove User?",
   "Setting": "Setting",
   "seven": "seven",
   "six": "six",
   "Sound :": "Sound :",
+  "Teacher  :": "Teacher  :",
   "ten": "ten",
   "three": "three",
   "Twitter": "Twitter",
   "two": "two",
   "User": "User",
   "verified": "verified",
-  "verifying...":"verifying...",
+  "verifying...": "verifying...",
   "verify": "verify",
   "Visit": "Visit",
   "We sent an OTP to verify your number.": "We sent an OTP to verify your number.",
