--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -43,6 +43,7 @@
   "1": "एक",
   "Phone number :": "फ़ोन नंबर :",
   "Profile": "प्रोफ़ाइल",
+  "Remove Teacher?": "शिक्षक को हटाओ?",
   "Remove User?": "उपयोगकर्ता निकालें?",
   "Resend OTP": "OTP को फिर से भेजें",
   "Rewards": "पुरस्कार",
@@ -53,6 +54,7 @@
   "seven": "सात",
   "six": "छह",
   "Sound :": "ध्वनि :",
+  "Teacher  :": "अध्यापक  :",
   "ten": "दस",
   "three": "तीन",
   "Twitter": "ट्विटर",
