--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -14,6 +14,7 @@
   "Email": "ईमेल",
   "Email :": "ईमेल :",
   "Enter the 6-digit otp here...": "यहाँ 6-अंकीय ओटीपी दर्ज करें ...",
+  "EXIT ?": "बाहर जाएं ?",
   "Facebook": "फ़ेसबुक",
   "five": "पांच",
   "Follow Us": "हमें फॉलो करें",
