--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -1,11 +1,18 @@
 {
+  "ACHIEVEMENTS": "ACHIEVEMENTS",
   "Age   :": "Age   :",
+  "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "Allie bought 2 boxes of mangos.\n Each box has 4 mangos.\n How many mangos did she buy?",
   "App Language :": "App Language :",
+  "BACKGROUND": "BACKGROUND",
+  "Begin Quiz": "Begin Quiz",
+  "Boy": "Boy",
   "Cancel": "Cancel",
   "Cannot verify OTP": "Cannot verify OTP",
   "Challenge": "Challenge",
+  "Characters": "Characters",
   "Choose your avatar": "Choose your avatar",
   "Choose Your Language": "Choose Your Language",
+  "circle": "circle",
   "Click x1 times on number x2!": "Click x1 times on number x2!",
   "Confirm": "Confirm",
   "Contact Us": "Contact us",
@@ -13,6 +20,7 @@
   "eight": "eight",
   "Email": "Email",
   "Email :": "Email :",
+  "English": "English",
   "Enter the 6-digit otp here...": "Enter the 6-digit otp here...",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "EXIT ?": "EXIT ?",
@@ -20,7 +28,9 @@
   "five": "five",
   "Follow Us": "Follow Us",
   "four": "four",
+  "Game Over": "Game Over",
   "Gender  :": "Gender  :",
+  "Girl": "Girl",
   "Help": "Help",
   "Help?": "Help?",
   "Home": "Home",
@@ -30,16 +40,23 @@
   "Invalid Email Address": "Invalid Email Address",
   "Invalid Phone Number": "Invalid Phone Number",
   "Literacy": "Literacy",
+  "mangos": "mangos",
+  "MatchBox": "MatchBox",
   "Maths": "Maths",
   "Name   :": "Name   :",
+  "New Level Unlocked": "New Level Unlocked",
+  "New World Unlocked": "New World Unlocked",
   "nine": "nine",
   "OK": "OK",
   "one": "one",
+  "Parent":"Parent",
   "Phone number :": "Phone number :",
   "Profile": "Profile",
-  "Resend OTP": "Resend OTP",
+  "Puzzle": "Puzzle",
   "Remove Teacher?": "Remove Teacher?",
   "Remove User?": "Remove User?",
+  "Resend OTP": "Resend OTP",
+  "Rewards": "Rewards",
   "Setting": "Setting",
   "seven": "seven",
   "six": "six",
@@ -55,6 +72,8 @@
   "verify": "verify",
   "Visit": "Visit",
   "We sent an OTP to verify your number.": "We sent an OTP to verify your number.",
+  "What is your name?": "What is your name?",
+  "What's your age?": "What's your age?",
   "WhatsApp": "WhatApp",
   "zero": "zero"
 }
