--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -29,7 +29,7 @@
   "Follow Us": "Follow Us",
   "four": "four",
   "Game Over": "Game Over",
-  "Gender  :": "Gender  :",
+  "Gender": "Gender",
   "Girl": "Girl",
   "Help": "Help",
   "Help?": "Help?",
