--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -29,7 +29,7 @@
   "Follow Us": "हमें फॉलो करें",
   "four": "चार",
   "Game Over": "खेल खत्म",
-  "Gender  :": "लिंग  :",
+  "Gender": "लिंग  :",
   "Girl": "लड़की",
   "Help": "सहायता",
   "Help?": "सहायता?",
