--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -29,7 +29,7 @@
   "Follow Us": "हमें फॉलो करें",
   "four": "चार",
   "Game Over": "खेल खत्म",
-  "Gender": "लिंग  :",
+  "Gender": "लिंग",
   "Girl": "लड़की",
   "Help": "सहायता",
   "Help?": "सहायता?",
@@ -49,7 +49,7 @@
   "nine": "नौ",
   "OK": "ठीक है",
   "one": "एक",
-  "Parent":"ज्येष्ठ",
+  "Parent":"माता-पिता",
   "Phone number :": "फ़ोन नंबर :",
   "Profile": "प्रोफ़ाइल",
   "Puzzle": "पहेली",
