--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -17,6 +17,7 @@
   "Confirm": "Confirm",
   "Contact Us": "Contact us",
   "Continue": "Continue",
+  "Done":"Done",
   "eight": "eight",
   "Email": "Email",
   "Email :": "Email :",
@@ -29,6 +30,7 @@
   "Follow Us": "Follow Us",
   "four": "four",
   "Game Over": "Game Over",
+  "Gender :": "Gender :",
   "Gender": "Gender",
   "Girl": "Girl",
   "Help": "Help",
@@ -55,6 +57,7 @@
   "Puzzle": "Puzzle",
   "Remove Teacher?": "Remove Teacher?",
   "Remove User?": "Remove User?",
+  "Report":"report",
   "Resend OTP": "Resend OTP",
   "Rewards": "Rewards",
   "Setting": "Setting",
