--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -17,6 +17,7 @@
   "Confirm": "पुष्टि करें",
   "Contact Us": "हमसे संपर्क करें",
   "Continue": "जारी रखें",
+  "Done":"हुआ",
   "eight": "आठ",
   "Email": "ईमेल",
   "Email :": "ईमेल :",
@@ -29,6 +30,7 @@
   "Follow Us": "हमें फॉलो करें",
   "four": "चार",
   "Game Over": "खेल खत्म",
+  "Gender :": "लिंग :",
   "Gender": "लिंग",
   "Girl": "लड़की",
   "Help": "सहायता",
@@ -55,6 +57,7 @@
   "Puzzle": "पहेली",
   "Remove Teacher?": "शिक्क को हटाओ?",
   "Remove User?": "उपयोगकर्ता निकालें?",
+  "Report":"सूचना दो",
   "Resend OTP": "OTP को फिर से भेजें",
   "Rewards": "पुरस्कार",
   "Setting": "सेटिंग",
