--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -46,6 +46,7 @@
   "MatchBox": "MatchBox",
   "Maths": "Maths",
   "Name   :": "Name   :",
+  "Name":"Name :",
   "New Level Unlocked": "New Level Unlocked",
   "New World Unlocked": "New World Unlocked",
   "nine": "nine",
@@ -60,6 +61,7 @@
   "Report":"report",
   "Resend OTP": "Resend OTP",
   "Rewards": "Rewards",
+  "School": "School",
   "Setting": "Setting",
   "seven": "seven",
   "six": "six",
