--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -46,6 +46,7 @@
   "MatchBox": "माच करें",
   "Maths": "गणित",  
   "Name   :": "नाम   :",
+  "Name":"नाम :",
   "New Level Unlocked": "नया स्तर खुला",
   "New World Unlocked": "नई दुनिया खुला",
   "nine": "नौ",
@@ -60,6 +61,7 @@
   "Report":"सूचना दो",
   "Resend OTP": "OTP को फिर से भेजें",
   "Rewards": "पुरस्कार",
+  "School": "पाठशाला",
   "Setting": "सेटिंग",
   "seven": "सात",
   "six": "छह",
