Fixes #733 i18n and some data issues.

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -112,6 +112,7 @@
   "Profile": "Profile",
   "Puzzle": "Puzzle",
   "Rani makes 8 cupcakes. She gives 3 cupcakes to her cousin. How many cupcakes does she have left?":"Rani makes 8 cupcakes. She gives 3 cupcakes to her cousin. How many cupcakes does she have left?",
+  "Rectangle":"Rectangle",
   "Remove Teacher?": "Remove Teacher?",
   "Remove User?": "Remove User?",
   "Report":"report",
@@ -140,6 +141,7 @@
   "Sheetal has 9 bracelets. She loses 2 of them. How many bracelets does Sheetal have left?":"Sheetal has 9 bracelets. She loses 2 of them. How many bracelets does Sheetal have left?",
   "Shilpa walks 4 kilometers to school. Jaya walks 2 kilometers to school. How many more kilometers does Shilpa walk than Jaya to school?":"Shilpa walks 4 kilometers to school. Jaya walks 2 kilometers to school. How many more kilometers does Shilpa walk than Jaya to school?",
   "Shimona found 20 seashells on the beach. Nadira found 6 seashells. How many more seashells did Shimona find than Nadira?":"Shimona found 20 seashells on the beach. Nadira found 6 seashells. How many more seashells did Shimona find than Nadira?",
+  "Square":"Square",
   "Sudha bought 8 candies and Jaya bought 9 candies. How many candies did they buy in all?":"Sudha bought 8 candies and Jaya bought 9 candies. How many candies did they buy in all?",
   "Suman earns star stickers when she does math at school. Yesterday, Suman earned 4 stars. Today, she earned 3 more. How many stars did Suman earn in all?":"Suman earns star stickers when she does math at school. Yesterday, Suman earned 4 stars. Today, she earned 3 more. How many stars did Suman earn in all?",
   "Sushanth has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?":"Sushanth has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?",
@@ -177,6 +179,7 @@
   "three": "three",
   "Tina borrowed 11 books from the library. Her friend borrowed 5 books. How many more books did Tina borrow than her friend?":"Tina borrowed 11 books from the library. Her friend borrowed 5 books. How many more books did Tina borrow than her friend?",
   "Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?":"Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?",
+  "Triangle":"Triangle",   
   "Tushar has 6 books. James has 2 books. How many books do they have in all?":"Tushar has 6 books. James has 2 books. How many books do they have in all?",
   "Tushar planted 5 seeds in a school garden. Jaya planted 8 seeds. How many fewer seeds did Tushar plant than Jaya?":"Tushar planted 5 seeds in a school garden. Jaya planted 8 seeds. How many fewer seeds did Tushar plant than Jaya?",
   "Twitter": "Twitter",
