--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -112,6 +112,7 @@
   "Profile": "प्रोफ़ाइल",
   "Puzzle": "पहेली",
   "Rani makes 8 cupcakes. She gives 3 cupcakes to her cousin. How many cupcakes does she have left?":"हिना 8 रोटियां बनाती हैं।\nवह अपने भाई को 3 रोटियाँ देती है।\nउसके पास कितनी रोटियाँ बची हैं?",
+  "Rectangle":"आयत",
   "Remove Teacher?": "शिक्क को हटाओ?",
   "Remove User?": "उपयोगकर्ता निकालें?",
   "Report":"सूचना दो",
@@ -140,6 +141,7 @@
   "Sheetal has 9 bracelets. She loses 2 of them. How many bracelets does Sheetal have left?":"मीरा के पास 9 कंगन हैं।\nवह उनमें से 2  कंगन खो देता है।\nमीरा के पास कितने कंगन बची हैं?",
   "Shilpa walks 4 kilometers to school. Jaya walks 2 kilometers to school. How many more kilometers does Shilpa walk than Jaya to school?":"आशा 4 किलोमीटर चल कर स्कूल जाती हैं।\nजय 2 किलोमीटर चल कर स्कूल जाता है।\nआशा स्कूल जाने के लिए जय से कितने अधिक किलोमीटर चलती है?",
   "Shimona found 20 seashells on the beach. Nadira found 6 seashells. How many more seashells did Shimona find than Nadira?":"सौम्या को समुद्र तट पर 20 केकड़े मिले।\nनादिर को 6 केकड़े मिले।\nसौम्या को नादिर की तुलना में कितने अधिक केकड़े मिले?",
+  "Square":"वर्ग",
   "Sudha bought 8 candies and Jaya bought 9 candies. How many candies did they buy in all?":"मीना ने 8 कैंडी खरीदी और जय ने 9 कैंडी खरीदी।\nउन्होंने सभी में कितने कैंडी खरीदे?",
   "Suman earns star stickers when she does math at school. Yesterday, Suman earned 4 stars. Today, she earned 3 more. How many stars did Suman earn in all?":"जब सारा स्कूल में गणित करती है तो वह स्टार स्टिकर कमाती है।\nकल सारा ने 4 स्टार कमाए।\nआज उसने 3 और स्टार कमाए।\nसारा ने कितने स्टार कमाए?",
   "Sushanth has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?":"ज़ाकिर के 17 जन्मदिन उपहार हैं।\n9 तोहफे उसके परिवार के तरफ से हैं और बाकी उसके दोस्तों दी हैं।\nउसके दोस्तों के तरफ से कितने उपहार हैं?",
@@ -177,6 +179,7 @@
   "three": "तीन",
   "Tina borrowed 11 books from the library. Her friend borrowed 5 books. How many more books did Tina borrow than her friend?":"टीना ने लाइब्रेरी से 11 किताबें लीं हे।\nउसके दोस्त ने 5 किताबें लीं।\nटीना ने अपने दोस्त से कितनी अधिक किताबें लीं?",
   "Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?":"तेज के कुत्ते ने कुछ पिल्लों को जन्म दिया।\nतेज ने अपने दोस्तों को 6 पिल्ले दिए।\nअब उसके पास 2 पिल्ले बचे हैं।\nउनके कुत्ते ने कितने पिल्लों को जन्म दिया?",
+  "Triangle":"त्रिकोण",
   "Tushar has 6 books. James has 2 books. How many books do they have in all?":"तुषार के पास 6 किताबें हैं।\nजेम्स के पास 2 किताबें हैं।\nउनके पास कुल मिलाके कितनी किताबें हैं?",
   "Tushar planted 5 seeds in a school garden. Jaya planted 8 seeds. How many fewer seeds did Tushar plant than Jaya?":"तुषार ने एक स्कूल के बगीचे में 5 बीज लगाए।\nजय ने 8 बीज बोए।\nतुषार ने जय से कितने कम बीज बोए?",
   "Twitter": "ट्विटर",
