Rewards text change

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -8,7 +8,7 @@
   "A man was carrying balloons but the wind blew 6 away. He has 2 balloons left. How many balloons did he start with?":"A man was carrying balloons but the wind blew 6 away. He has 2 balloons left. How many balloons did he start with?",
   "A piece of wood is 13 inches long. It is cut into two parts. One part is 6 inches long. How long is the other part?":"A piece of wood is 13 inches long. It is cut into two parts. One part is 6 inches long. How long is the other part?",
   "Ayushman has 3 pairs of socks. Each pair has 2 socks. How many socks does Ayushman have?":"Ayushman has 3 pairs of socks. Each pair has 2 socks. How many socks does Ayushman have?",
-  "ACHIEVEMENTS": "ACHIEVEMENTS",
+  "Achievements": "Achievements",
   "Age   :": "Age   :",
   "Akash has 4 pencils and his sister has 8 more pencils than him. How many pencils does Akash's sister have?":"Akash has 4 pencils and his sister has 8 more pencils than him. How many pencils does Akash's sister have?",
   "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "Allie bought 2 boxes of mangos.\n Each box has 4 mangos.\n How many mangos did she buy?",
@@ -17,7 +17,7 @@
   "Anita has 5 books. 3 of them are science books and the rest are storybooks. How many are storybooks?":"Anita has 5 books. 3 of them are science books and the rest are storybooks. How many are storybooks?",
   "App Language :": "App Language :",
   "Aryan has 4 stamps. Deepika has 5 more stamps than Aryan. How many stamps does Deepika have?":"Aryan has 4 stamps. Deepika has 5 more stamps than Aryan. How many stamps does Deepika have?",
-  "BACKGROUND": "BACKGROUND",
+  "Backgrounds": "Backgrounds",
   "Begin Quiz": "Begin Quiz",
   "Bindu writes 14 letters to friends and family. 7 letters are for her friends and the rest are for her family. How many letters are for her family?":"Bindu writes 14 letters to friends and family. 7 letters are for her friends and the rest are for her family. How many letters are for her family?",
   "Boy": "Boy",
@@ -26,7 +26,7 @@
   "Cancel": "Cancel",
   "Cannot verify OTP": "Cannot verify OTP",
   "Challenge": "Challenge",
-  "Characters": "Characters",
+  "Friends": "Friends",
   "Children are drawing pictures to decorate their classroom. The boys draw 11 pictures and the girls draw 20. How many more pictures do girls draw than boys?":"Children are drawing pictures to decorate their classroom. The boys draw 11 pictures and the girls draw 20. How many more pictures do girls draw than boys?",
   "Choose your avatar": "Choose your avatar",
   "Choose Your Language": "Choose Your Language",
