--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -8,7 +8,7 @@
   "A man was carrying balloons but the wind blew 6 away. He has 2 balloons left. How many balloons did he start with?":"एक आदमी गुब्बारे ले जा रहा था लेकिन हवा से 6 गुब्बारे उड़द गए।\nउसके पास 2 गुब्बारे बचे हैं।\nशुरुआत में उसके पास कितने गुब्बारे थे?", 
   "A piece of wood is 13 inches long. It is cut into two parts. One part is 6 inches long. How long is the other part?":"एक लकड़ी का एक टुकड़ा 13 इंच लंबा होता है।\nइसे दो भागों में काटा जाता है।\nएक हिस्सा  6 इंच लंबा है।\nअन्य भाग की कितनी लम्बाई है?",
   "Ayushman has 3 pairs of socks. Each pair has 2 socks. How many socks does Ayushman have?":"रौनक ने 3 जोड़ी मोजे हैं।\nप्रत्येक जोड़ी में 2 मोजे होते हैं।\nरौनक के पास कितने मोज़े हैं?",
-  "ACHIEVEMENTS": "उपलब्धियां",
+  "Achievements": "उपलब्धियां",
   "Age   :": "आयु   :",
   "Akash has 4 pencils and his sister has 8 more pencils than him. How many pencils does Akash's sister have?":"प्रथम के पास 4 पेंसिल हैं और उनकी बहन के पास उनसे 8 अधिक पेंसिल हैं।\nबॉब की बहन के पास कितनी पेंसिल हैं?",
   "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "आयशा ने आम के 2 बक्से खरीदे।\nप्रत्येक बक्से में 4 आम हैं।\nउसने कितने आम खरीदे?",
@@ -17,7 +17,7 @@
   "Anita has 5 books. 3 of them are science books and the rest are storybooks. How many are storybooks?":"अनीता के पास 5 किताबें हैं।\nउनमें से 3 विज्ञान की किताबें हैं और बाकी कहानी की पुस्तकें हैं।\nअनीता के पास कहानी की पुस्तकें कितने हैं?", 
   "App Language :": "ऐप भाषा :",
   "Aryan has 4 stamps. Deepika has 5 more stamps than Aryan. How many stamps does Deepika have?":"हरि के पास 4 स्टांप हैं।\nइरा के पास हरि की तुलना में 5 अधिक स्टांप हैं।\nएरा के पास कितने स्टांप हैं?",
-  "BACKGROUND": "पृष्ठभूमि",
+  "Backgrounds": "पृष्ठभूमि",
   "Begin Quiz": "प्रश्नोत्तरी शुरू करें",
   "Bindu writes 14 letters to friends and family. 7 letters are for her friends and the rest are for her family. How many letters are for her family?":"मेधा ने दोस्तों और परिवार को 14 पत्र लिखे।\n7 पत्र उसके दोस्तों के लिए लिखे हैं और बाकी उसके परिवार के लिखे हैं।\nउसने उसके परिवार के लिए कितने पत्र लिखे हैं?",
   "Boy": "लड़का",
@@ -26,7 +26,7 @@
   "Cancel": "रद्द",
   "Cannot verify OTP": "OTP को सत्यापित नहीं किया जा सकता",
   "Challenge": "चुनौती",
-  "Characters": "पात्र",
+  "Friends": "पात्र",
   "Children are drawing pictures to decorate their classroom. The boys draw 11 pictures and the girls draw 20. How many more pictures do girls draw than boys?":"बच्चे अपनी कक्षा को सजाने के लिए चित्र बना रहे हैं।\nलड़को ने 11 चित्र बनाते हैं और लड़कियाँ 20 चित्र बनाती हैं।\nलड़कियाँ लड़कों की तुलना में कितनी अधिक चित्र बनती हैं?",
   "Choose your avatar": "अपना अवतार चुनें",
   "Choose Your Language": "अपना भाषा चुनें",
