--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -16,11 +16,13 @@
   "Anita caught 5 fish in the morning. She caught 4 more fish in the afternoon. How many fish did Anita catch in all?":"सीमा ने सुबह 5 मछलियाँ पकड़ीं।\nउसने दोपहर में 4 \nऔर मछलियाँ पकड़ीं।\nसीमा ने कुल मिलाकर कितनी मछलियाँ पकड़ीं?",
   "Anita has 5 books. 3 of them are science books and the rest are storybooks. How many are storybooks?":"अनीता के पास 5 किताबें हैं।\nउनमें से 3 विज्ञान की किताबें हैं और बाकी कहानी की पुस्तकें हैं।\nअनीता के पास कहानी की पुस्तकें कितने हैं?", 
   "App Language :": "ऐप भाषा :",
+  "apples":"सेब",
   "Aryan has 4 stamps. Deepika has 5 more stamps than Aryan. How many stamps does Deepika have?":"हरि के पास 4 स्टांप हैं।\nइरा के पास हरि की तुलना में 5 अधिक स्टांप हैं।\nएरा के पास कितने स्टांप हैं?",
   "BACKGROUND": "पृष्ठभूमि",
   "Begin Quiz": "प्रश्नोत्तरी शुरू करें",
   "Bindu writes 14 letters to friends and family. 7 letters are for her friends and the rest are for her family. How many letters are for her family?":"मेधा ने दोस्तों और परिवार को 14 पत्र लिखे।\n7 पत्र उसके दोस्तों के लिए लिखे हैं और बाकी उसके परिवार के लिखे हैं।\nउसने उसके परिवार के लिए कितने पत्र लिखे हैं?",
   "Boy": "लड़का",
+  "books":"किताबें",
   "Bunny bought 3 more books than Garima. Garima bought a book. How many books did Bunny buy?":"बाला ने गिरी से 3 किताबें अधिक खरीदीं।\nगिरी ने एक किताब खरीदी।\nबाला ने कितनी किताबें खरीदीं?",
   "Bunty has 17 balloons. 8 balloons are red and the rest are green. How many balloons are green?":"नकुल के 17 गुब्बारे हैं।\n8 गुब्बारे लाल रंग के हैं और बाकी हरे हैं।\nकितने गुब्बारे हरे रंग के हैं?",
   "Cancel": "रद्द",
@@ -32,12 +34,16 @@
   "Choose Your Language": "अपना भाषा चुनें",
   "circle": "वृत्त",
   "Click x1 times on number x2!": "नंबर x2 पर x1 बार क्लिक करें!",
+  "Cone":"शंकु",
   "Confirm": "पुष्टि करें",
   "Contact Us": "हमसे संपर्क करें",
   "Continue": "जारी रखें",
+  "cube":"घनक्षेत्र",
+  "cylinder":"सिलेंडर",
   "David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?":"ध्रुव और उसके दोस्त 9 पतंग उड़ाते हैं।\nकुछ पतंग एक पेड़ में फंस जाती हैं।\n6 पतंगें अभी भी उड़ रही हैं।\nपेड़ में कितनी पतंगें अटकी हैं?",
   "Deepa has 5 more puzzles than Pradip. Pradip has 3 puzzles. How many puzzles does Deepa have?":"एक फुटबॉल टीम ने पहले हाफ में 3 गोल किए।\nफिर उन्होंने दूसरे हाफ में अधिक गोल किए।\nउन्होंने 5 गोल से गेम जीता! दूसरे हाफ में उन्होंने कितने गोल किए?",
   "Done":"हुआ",
+  "eggs":"अंडे",
   "eight": "आठ",
   "Email": "ईमेल",
   "Email :": "ईमेल :",
@@ -47,6 +53,7 @@
   "EXIT ?": "बाहर जाएं ?",
   "Facebook": "फ़ेसबुक",
   "five": "पांच",
+  "fish":"मछली",
   "Follow Us": "हमें फॉलो करें",
   "four": "चार",
   "Ganesh went to a store and bought some t-shirts. He went to another store and bought 2 more t-shirts. He bought a total of 7 t-shirts. How many t-shirts did he buy at the first store?":"गिरीश एक दुकान पर गया और कुछ टी-शर्ट खरीदी।\nवह दूसरे दुकान में गया और 2 और टी-शर्ट खरीदे।\nउसने कुल मिलाकर 7 टी-शर्ट खरीदीं।\nउसने पहली दुकान पर कितनी टी-शर्ट खरीदीं?",
@@ -59,6 +66,7 @@
   "Helen saw 12 birds in a tree and 7 birds in another tree. How many birds did she see altogether?":"हेमा ने एक पेड़ में 12 पक्षी और दूसरे पेड़ में 7 पक्षी देखे।\nउसने कुल मिलाकर कितने पक्षी देखे?",
   "Help": "सहायता",
   "Help?": "सहायता?",
+  "hexagon":"षट्भुज",
   "Home": "घर",
   "How Many??": "कितने??",
   "hundred": "सौ",
@@ -86,6 +94,7 @@
   "Lena has 12 books. She donates 8 books to her class library. How many books does Lena have left?":"लीना के पास 12 किताबें हैं।\nवह अपनी कक्षा की लाइब्रेरी में  8 किताबें दान करती हैं।\nलीना के पास कितनी किताबें बाकि हैं?",
   "Literacy": "हिन्दी",
   "mangos": "आम",
+  "marbles":"मार्बल",
   "Maria read 3 books and Sonal read 5 books. How many more books did Sonal read than Maria?":"मीशा ने 3 किताबें पढ़ीं और सीमा ने 5 किताबें पढ़ीं।\nसीमा ने मीशा की तुलना में कितनी अधिक किताबें पढ़ीं?",
   "MatchBox": "माच करें",
   "Maths": "गणित",
@@ -110,6 +119,8 @@
   "Nitin has 13 oranges. He eats 5 of them. How many oranges does he have left?":"नील में 13 संतरे हैं।\nवह उनमें से  5 खाता है।\nउसके पास कितने संतरे बचे हैं?",
   "OK": "ठीक है",
   "one": "एक",
+  "oval":"oval",
+  "parallelogram":"समानांतर चतुर्भुज",
   "Pankaj has 7 plums. Kapil has 4 more plums than Pankaj. How many plums does Kapil have?":"पंकज के पास 7 प्लम हैं। पंकज की तुलना में कपिल के पास 4 और प्लम हैं। कपिल के पास कितने प्लम हैं?",
   "Parent":"माता-पिता",
   "Phone number :": "फ़ोन नंबर :",
@@ -124,6 +135,7 @@
   "Report":"सूचना दो",
   "Resend OTP": "OTP को फिर से भेजें",
   "Rewards": "पुरस्कार",
+  "rhombus":"विषमकोण",
   "Sandeep picked 6 mangos from a tree. He put an equal number of mangos into 3 boxes. How many mangos did he put in each box?":"सचिन ने एक पेड़ से 6 आम निकाले।\nउन्होंने आमों की एक समान संख्या को 3 बक्से में रखा।\nप्रत्येक बक्से में उसने कितने आम रखे थे?",
   "Sandy is 5 years old. Meera is 7 years older than Sandy. How old is Meera?":"सैंडी की उम्र 5 साल है। मीरा सैंडी से 7 साल बड़ी हैं।\n मीरा की उम्र कितनी है?",
   "Salman and Rakesh drew 8 pictures together. Salman drew 3 pictures. How many pictures did Rakesh draw?":"एक पेड़ की शाखा पर 8 पक्षी बैठे हैं ।\nकुछ पक्षी उड़ गए।\nअब शाखा पर 3 पक्षी हैं।\nकितने पक्षी उड़ गए?",
@@ -150,11 +162,14 @@
   "Sheetal has 9 bracelets. She loses 2 of them. How many bracelets does Sheetal have left?":"मीरा के पास 9 कंगन हैं।\nवह उनमें से 2  कंगन खो देता है।\nमीरा के पास कितने कंगन बची हैं?",
   "Shilpa walks 4 kilometers to school. Jaya walks 2 kilometers to school. How many more kilometers does Shilpa walk than Jaya to school?":"आशा 4 किलोमीटर चल कर स्कूल जाती हैं।\nजय 2 किलोमीटर चल कर स्कूल जाता है।\nआशा स्कूल जाने के लिए जय से कितने अधिक किलोमीटर चलती है?",
   "Shimona found 20 seashells on the beach. Nadira found 6 seashells. How many more seashells did Shimona find than Nadira?":"सौम्या को समुद्र तट पर 20 केकड़े मिले।\nनादिर को 6 केकड़े मिले।\nसौम्या को नादिर की तुलना में कितने अधिक केकड़े मिले?",
+  "sphere":"क्षेत्र",
   "Square":"वर्ग",
+  "stars":"स्टार",
   "Sudha bought 8 candies and Jaya bought 9 candies. How many candies did they buy in all?":"मीना ने 8 कैंडी खरीदी और जय ने 9 कैंडी खरीदी।\nउन्होंने सभी में कितने कैंडी खरीदे?",
   "Suman earns star stickers when she does math at school. Yesterday, Suman earned 4 stars. Today, she earned 3 more. How many stars did Suman earn in all?":"जब सारा स्कूल में गणित करती है तो वह स्टार स्टिकर कमाती है।\nकल सारा ने 4 स्टार कमाए।\nआज उसने 3 और स्टार कमाए।\nसारा ने कितने स्टार कमाए?",
   "Sushanth has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?":"ज़ाकिर के 17 जन्मदिन उपहार हैं।\n9 तोहफे उसके परिवार के तरफ से हैं और बाकी उसके दोस्तों दी हैं।\nउसके दोस्तों के तरफ से कितने उपहार हैं?",
   "Swamy has 11 mangos in a basket. Swamy gives 4 mangos to his sister. How many mangos are left in the basket?":"धीर के पास एक टोकरी में 11 आम होते हैं।\nधीर अपनी बहन को 4 आम देता है।\nटोकरी में कितने आम बचे हैं?",
+  "tables":"टेबल",
   "Tanya picked 3 flowers in the morning. She picked some more flowers in the afternoon. If Tanya picked 8 flowers in all, how many did she pick in the afternoon?":"तारा ने सुबह 3 फूल तोड़े थे ।\nउसने दोपहर में कुछ और फूल तोड़े।\nयदि तारा ने कुल मिलाकर 8 फूल तोड़े थे  तो उसने दोपहर में कितने फूल तोड़े थे?",
   "Teacher  :": "अध्यापक  :",
   "ten": "दस",
@@ -191,7 +206,7 @@
   "Tina borrowed 11 books from the library. Her friend borrowed 5 books. How many more books did Tina borrow than her friend?":"टीना ने लाइब्रेरी से 11 किताबें लीं हे।\nउसके दोस्त ने 5 किताबें लीं।\nटीना ने अपने दोस्त से कितनी अधिक किताबें लीं?",
   "Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?":"तेज के कुत्ते ने कुछ पिल्लों को जन्म दिया।\nतेज ने अपने दोस्तों को 6 पिल्ले दिए।\nअब उसके पास 2 पिल्ले बचे हैं।\nउनके कुत्ते ने कितने पिल्लों को जन्म दिया?",
   "Triangle":"त्रिकोण",
-  "Tushar has 6 books. James has 2 books. How many books do they have in all?":"तुषार के पास 6 किताबें हैं।\nजेम्स के पास 2 किताबें हैं।\nउनके पास कुल मिलाके कितनी किताबें हैं?",
+  "Tom has 6 books. James has 2 books. How many books do they have in all?":"तुषार के पास 6 किताबें हैं।\nजेम्स के पास 2 किताबें हैं।\nउनके पास कुल मिलाके कितनी किताबें हैं?",
   "Tushar planted 5 seeds in a school garden. Jaya planted 8 seeds. How many fewer seeds did Tushar plant than Jaya?":"तुषार ने एक स्कूल के बगीचे में 5 बीज लगाए।\nजय ने 8 बीज बोए।\nतुषार ने जय से कितने कम बीज बोए?",
   "Twitter": "ट्विटर",
   "two": "दो",
@@ -205,19 +220,30 @@
   "What is your name?": "तुम्हारा नाम क्या है?",
   "What's your age?": "तुम्हारी उम्र क्या है?",
   "WhatsApp": "व्हाट्सएप",
+  "Which group is bigger?":"कौन सा समूह बड़ा है?",
+  "Which is a circle?":"इनमें से कौन सा चक्र हैं?",
+  "Which is the biggest?":"कौन सा सबसे बड़ा है?",
+  "Write here":"यहाँ लिखें",
   "Yesterday, the store had 7 bags of rice. Today, the store has 2 bags of rice. How many bags of rice did the store sell?":"कल  दुकान में चावल के 7 बैग थे।\nआज दुकान में चावल के 2 बैग हैं।\nदुकान ने कितने बैग चावल बेचे?",
   "You and your sister share 10 bags of chips equally. How many bags of chips will each of you get?":"आप और आपकी बहन समान रूप से चिप्स के 10 बैग बांटते हैं।\nचिप्स के कितने बैग प्रत्येक को मिलेंगे?",
   "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?":"आपके पास 7 गुब्बारे हैं और आपके मित्र के पास 5 गुब्बारे हैं।\nआपके मित्र के तुलना में आपके पास और कितने गुब्बारे हैं?",
   "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?":"आपके पास कुछ स्टांप हैं।\nआपका भाई आपको 6 स्टांप देता है।\nअब आपके पास 10 स्टांप हैं।\nआपने कितने स्टांप के साथ शुरुआत की?",
   "zero": "शून्य",
+  "0 sides":"शून्य पक्ष",
+  "1 face":"1 चेहरा",
   "2 children share 8 sweets equally. How many sweets does each child get?":"2 बच्चे 8 मिठाई समान रूप से बांटते हैं।\nप्रत्येक बच्चे को कितनी मिठाई मिलती है?",
   "2 birds were sitting on the fence. 4 more birds joined them. How many birds are on the fence?":"2 पक्षी बाड़ पर बैठे थे।\n4 और पक्षी उनके साथ बेठ गए ।\nकितने पक्षी बाड़ पर हैं?",
   "3 friends share 12 candies equally. How many candies does each friend get?":"3 दोस्त 12 कैंडी को समान रूप से बांटते हैं।\nप्रत्येक मित्र को कितने कैंडी मिलते हैं?",
+  "3 sides":"3 sides",
   "4 birds are sitting on a branch. 1 flew away. How many birds are left on the branch?":"4 पक्षी एक शाखा पर बैठे हैं।\n1 पक्षी उड़ जाता है।\nशाखा पर कितने पक्षी बचे हैं?",
+  "4 sides":"4 भुजाएँ",
   "5 apples are on the table. Sam eats 2 apples. How many apples are left on the table?":"5 सेब टेबल पर हैं।\nसुंदर  2 सेब खाता है।\nटेबल पर कितने सेब बचे हैं?",
+  "5 sides":"5 भुजाएँ",
+  "6 sides":"6 भुजाएँ",
   "7 children are on a bus. 4 more children get on the bus. How many children are on the bus?":"एक बस में 7 बच्चे सवार हैं।\n4 और बच्चे बस में चढ़े।\nबस में अब कितने बच्चे हैं?",
   "7 red apples and 2 green apples are in the basket. How many apples are in the basket?":"7 लाल सेब और 2 हरे सेब टोकरी में हैं।\nटोकरी में कुल मिलाकर कितने सेब हैं?",
   "7 boys ride their bikes. Some of the boys go home. 5 boys continue riding their bikes. How many boys went home?":"7 लड़के अपनी बाइक चला रहे थे।\nकुछ लड़के घर जाते हैं।\n5 लड़के अपनी बाइक चलाना जारी रखते हैं।\nकितने लड़के घर चले गए?",
   "8 birds sat on a tree branch. Some flew away. Now there are 3 birds on the branch. How many birds flew away?":"एक पेड़ की शाखा पर 8 पक्षी बैठे हैं ।\nकुछ पक्षी उड़ गए।\nअब शाखा पर 3 पक्षी हैं।\nकितने पक्षी उड़ गए?",
+  "10 sides":"10 भुजाएँ",
   "20 students were equally divided into 4 groups by the teacher. How many students are in each group?":"20 छात्रों को शिक्षक द्वारा 4 दलों में समान रूप से विभाजित किया गया था।\nप्रत्येक दाल में कितने छात्र हैं?"
 }
