--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -163,7 +163,7 @@
   "Shilpa walks 4 kilometers to school. Jaya walks 2 kilometers to school. How many more kilometers does Shilpa walk than Jaya to school?":"आशा 4 किलोमीटर चल कर स्कूल जाती हैं।\nजय 2 किलोमीटर चल कर स्कूल जाता है।\nआशा स्कूल जाने के लिए जय से कितने अधिक किलोमीटर चलती है?",
   "Shimona found 20 seashells on the beach. Nadira found 6 seashells. How many more seashells did Shimona find than Nadira?":"सौम्या को समुद्र तट पर 20 केकड़े मिले।\nनादिर को 6 केकड़े मिले।\nसौम्या को नादिर की तुलना में कितने अधिक केकड़े मिले?",
   "sphere":"क्षेत्र",
-  "Square":"वर्ग",
+  "square":"वर्ग",
   "stars":"स्टार",
   "Sudha bought 8 candies and Jaya bought 9 candies. How many candies did they buy in all?":"मीना ने 8 कैंडी खरीदी और जय ने 9 कैंडी खरीदी।\nउन्होंने सभी में कितने कैंडी खरीदे?",
   "Suman earns star stickers when she does math at school. Yesterday, Suman earned 4 stars. Today, she earned 3 more. How many stars did Suman earn in all?":"जब सारा स्कूल में गणित करती है तो वह स्टार स्टिकर कमाती है।\nकल सारा ने 4 स्टार कमाए।\nआज उसने 3 और स्टार कमाए।\nसारा ने कितने स्टार कमाए?",
