--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -34,7 +34,7 @@
   "Choose Your Language": "अपना भाषा चुनें",
   "circle": "वृत्त",
   "Click x1 times on number x2!": "नंबर x2 पर x1 बार क्लिक करें!",
-  "Cone":"शंकु",
+  "cone":"शंकु",
   "Confirm": "पुष्टि करें",
   "Contact Us": "हमसे संपर्क करें",
   "Continue": "जारी रखें",
