--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -205,7 +205,7 @@
   "three": "three",
   "Tina borrowed 11 books from the library. Her friend borrowed 5 books. How many more books did Tina borrow than her friend?":"Tina borrowed 11 books from the library. Her friend borrowed 5 books. How many more books did Tina borrow than her friend?",
   "Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?":"Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?",
-  "Triangle":"Triangle",   
+  "triangle":"triangle",   
   "Tom has 6 books. James has 2 books. How many books do they have in all?":"Tushar has 6 books. James has 2 books. How many books do they have in all?",
   "Tushar planted 5 seeds in a school garden. Jaya planted 8 seeds. How many fewer seeds did Tushar plant than Jaya?":"Tushar planted 5 seeds in a school garden. Jaya planted 8 seeds. How many fewer seeds did Tushar plant than Jaya?",
   "Twitter": "Twitter",
