--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -205,7 +205,7 @@
   "three": "तीन",
   "Tina borrowed 11 books from the library. Her friend borrowed 5 books. How many more books did Tina borrow than her friend?":"टीना ने लाइब्रेरी से 11 किताबें लीं हे।\nउसके दोस्त ने 5 किताबें लीं।\nटीना ने अपने दोस्त से कितनी अधिक किताबें लीं?",
   "Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?":"तेज के कुत्ते ने कुछ पिल्लों को जन्म दिया।\nतेज ने अपने दोस्तों को 6 पिल्ले दिए।\nअब उसके पास 2 पिल्ले बचे हैं।\nउनके कुत्ते ने कितने पिल्लों को जन्म दिया?",
-  "Triangle":"त्रिकोण",
+  "triangle":"त्रिकोण",
   "Tom has 6 books. James has 2 books. How many books do they have in all?":"तुषार के पास 6 किताबें हैं।\nजेम्स के पास 2 किताबें हैं।\nउनके पास कुल मिलाके कितनी किताबें हैं?",
   "Tushar planted 5 seeds in a school garden. Jaya planted 8 seeds. How many fewer seeds did Tushar plant than Jaya?":"तुषार ने एक स्कूल के बगीचे में 5 बीज लगाए।\nजय ने 8 बीज बोए।\nतुषार ने जय से कितने कम बीज बोए?",
   "Twitter": "ट्विटर",
